# vexjoy-agent

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  install.sh  pyproject.toml
.audit/unified-deck-prototype/: README.md
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: test.yml
agents/: INDEX.json  base-instructions.md  golang-general-engineer-compact.md  golang-general-engineer.md  kubernetes-helm-engineer.md  nextjs-ecommerce-engineer.md  opensearch-elasticsearch-engineer.md  pixijs-combat-renderer.md  project-coordinator-engineer.md  python-openstack-engineer.md  react-native-engineer.md  research-coordinator-engineer.md  reviewer-domain.md  rive-skeletal-animator.md  swift-general-engineer.md  toolkit-governance-engineer.md  typescript-frontend-engineer.md  urban-gardener-agent.md
agents/ansible-automation-engineer/references/: modules.md
agents/base-instructions/references/: communication-patterns.md  testing.md
agents/combat-effects-upgrade/references/: css-particle-migration.md
agents/golang-general-engineer/references/: patterns-and-gates.md
agents/kubernetes-helm-engineer/references/: helm-patterns.md  kubernetes-troubleshooting.md
agents/mcp-local-docs-engineer/references/: mcp-patterns.md
agents/nextjs-ecommerce-engineer/references/: patterns-and-errors.md
agents/nodejs-api-engineer/references/: auth-patterns.md
agents/opensearch-elasticsearch-engineer/references/: index-management.md
agents/performance-optimization-engineer/references/: nextjs-optimization.md
agents/php-general-engineer/references/: hooks-and-behaviors.md
docs/: CITATIONS.md  PHILOSOPHY.md  QUICKSTART.md  REFERENCE.md  for-ai-wizards.md  for-claude-code.md  for-developers.md  for-knowledge-workers.md  for-linkedin.md  injected-context-contracts.md  start-here.md
hooks/: README.md  fish-shell-detector.py  instruction-compliance.py  operator-context-detector.py  pipeline-context-detector.py  pipeline-phase-gate.py  posttool-auto-test.py  posttool-docs-drift-alert.py  posttool-security-scan.py  posttooluse-sync-skill-index.py  pretool-subagent-warmstart.py  prevent-homedir-server.py  prompt-capture.py  reference-loading-gate.py  sapcc-go-detector.py  security-review-hook.py  stop-drift-guard.py  voice-output-gate.py  zsh-shell-detector.py
hooks/afk-mode/: README.md
hooks/lib/: learning_db_v2.py
hooks/tests/: conftest.py  test_security_review_hook.py  test_stop_drift_guard.py  test_zsh_shell_detector.py
scripts/: check-routing-drift.py  conformance-harness.mjs  count-components.sh  detect-workflow-capability.py  fix-skill-paths.py  generate-agent-index.py  generate-skill-index.py  index-router.py  install-doctor.py  learning-db.py  migrate-skills-to-folders.py  pre-route.py  reference-enrichment-cron.sh  register-hook.py  right-size-review.py  routing-benchmark.json  routing-manifest.py  smoke-test-hooks.py  toolkit-evolution-cron.sh  validate-doc-commands.py  validate-doc-counts.py  validate-doc-links.py  validate-review-output.py  validate-workflow-conformance.py  validate_positive_instruction_docs.py  vexjoy-adr.py  workflow-registry.py
scripts/tests/: bench_review_gate_ab.py  test_detect_workflow_capability.py  test_instruction_compliance.py  test_review_output_gate.py  test_right_size_review.py  test_routing_accuracy.py  test_validate_workflow_conformance.py  test_workflow_registry.py
skills/: INDEX.json  README.md
skills/meta/do/: SKILL.md
skills/shared-patterns/: adversarial-verification.md  anti-rationalization-core.md
skills/voice-shared-references/: wabi-sabi-authenticity.md
skills/workflow/: SKILL.md
(+361 files in other folders)
