[project]
name = "vexjoy-agent"
version = "1.0.0"
description = "Agent-driven workflow system for Claude Code, Codex, and Gemini CLI"
requires-python = ">=3.10"

[project.optional-dependencies]
evals = [
    "anthropic>=0.40",
]
reddit = [
    "praw>=7.7",
    "python-dotenv>=1.0",
]
gemini = [
    "google-genai>=1.0",
]
quality = [
    "ruff>=0.8.0",
]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    # Pyflakes - logical errors
    "F",
    # pycodestyle errors
    "E",
    # pycodestyle warnings
    "W",
    # isort - import sorting
    "I",
    # flake8-bugbear - common bugs
    "B",
    # flake8-simplify - code simplification
    "SIM",
    # flake8-unused-arguments
    "ARG",
    # flake8-use-pathlib (disabled: 490 existing violations, fix incrementally)
    # "PTH",
    # Ruff-specific rules
    "RUF",
]

ignore = [
    # --- Globally necessary (violations spread across hooks/, scripts/, skills/) ---
    # Allow print statements in hooks/demo files (they're meant for output)
    "T201",
    # Allow broad exception catching in hooks (they need to be robust)
    "BLE001",
    # Allow assert in non-test files
    "S101",
    # Line too long (existing codebase uses 120 but some lines exceed)
    "E501",
    # f-string without placeholders (used intentionally in many places)
    "F541",
    # Undefined names (false positives in conditional imports and dynamic code)
    "F821",
    # Unused function arguments (hooks have required signatures)
    "ARG001",
    # Collapsible if statements (readability preference)
    "SIM102",
    # Unused variables (acceptable in hooks/scripts/skills)
    "F841",
    # Ambiguous variable names (e, l, etc. are fine in context)
    "E741",
    # Ternary instead of if/else (readability preference)
    "SIM108",
    # Suppressible exception (contextlib.suppress preference)
    "SIM105",
    # Unnecessary concatenation (readability)
    "RUF005",
    # Import not at top (conditional imports are intentional)
    "E402",
    # Unused imports (conditional/template imports in generated code)
    "F401",
    # raise without from in except (style preference)
    "B904",
    "B905",
    # Unused variable in loop unpacking
    "RUF059",
]

[tool.ruff.lint.per-file-ignores]
# Test files: allow print, assert, unused unpacked vars, temp files, unused args, long test strings
"**/tests/*.py" = ["T201", "S101", "RUF059", "SIM115", "ARG002", "B007", "RUF005"]
# Scripts are allowed to use print for user feedback
"**/scripts/*.py" = ["T201"]
# --- Rules moved from global ignore (scoped to directories that need them) ---
# Bare except: only used in skills/ codebase-analyzer cartographer scripts
"skills/**/*.py" = ["E722", "RUF013", "RUF021", "SIM116"]
# Hooks: fail-open patterns, dynamic code, simple boolean returns
"hooks/*.py" = ["SIM110", "SIM103"]
"hooks/**/*.py" = ["RUF010"]
# Scripts: loop-variable-unused (counting loops), redefined-unused (test fixtures), boolean returns
"scripts/*.py" = ["B007", "SIM103"]
"scripts/**/*.py" = ["F811", "RUF010"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (subprocess calls)",
    "integration: marks tests requiring external tools (e.g., Chrome headless)",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
